test/grammar/schema/type/type_fail_20/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:6:12
  |
6 |     info0: info.inf
  |            ^ attribute 'inf' not found in 'module 'pkg.info''
  |